force-app/main/default/objects/Stripe_Customer__c/Stripe_Customer__c.object-meta.xml
<CustomObject>
    <label>Stripe Customer</label>
    <nameField>
        <displayFormat>SC-{000000}</displayFormat>
        <label>Stripe Customer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>