force-app/main/default/objects/Stripe_Customer__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <label>Customer Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>