force-app/main/default/objects/Stripe_Customer__c/fields/Stripe_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Customer ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>