force-app/main/default/objects/Stripe_Customer__c/fields/Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Status__c</fullName>
    <label>Subscription Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Past Due</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>